--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,4 +3,5 @@
     <a href="{{ item.link }}" target="_blank"><i class="fa fa-{{ item.icon }}" aria-hidden="true"></i></a>
   {% endfor %}
   <div class="post-date"><a href="/menu/about.html">{{ site.data.settings.title }} | {{ site.data.settings.tagline }} by {{ site.data.settings.author.name }}</a></div>
+  <div class="post-date"><a href="https://lenpaul.github.io/Lagrange/">Theme: Lagrange by Paul Le</a></div>
 </footer>
