--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
   </title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
 
   <link rel="stylesheet" href="/assets/css/main.css">
   <link rel="stylesheet" href="/assets/css/syntax.css">
