--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,6 +91,13 @@ figcaption {
   font-variation-settings: "wght" 500;
 }
 
+@media (max-width: 768px) {
+  figure {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
 a.footnote {
   margin-left: 2px;
 }
