add cross-post link to CILVR

--- a/_includes/formatted_posts/repr-eval.html
+++ b/_includes/formatted_posts/repr-eval.html
@@ -1,5 +1,7 @@
 <h1>Representation quality and the complexity of learning</h1>
 
+<em>Cross-posted from the <a href="https://wp.nyu.edu/cilvr/2020/09/24/representation-quality-and-the-complexity-of-learning/">CILVR blog</a>.</em>
+
 <p>In the last few years, there's been an explosion of work on learning good representations of data.
     From NLP<sup><a href="#fn1-28786" id="fnr1-28786" title="see footnote" class="footnote">1</a></sup><sup><a
             href="#fn2-28786" id="fnr2-28786" title="see footnote" class="footnote">2</a></sup><sup><a
