--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -312,11 +312,12 @@ pre {
     padding: 8px 12px;
     overflow-x: auto;
 
-    > code {
-        border: 0;
-        padding-right: 0;
-        padding-left: 0;
-    }
+}
+
+pre > code {
+    border: 0;
+    padding-right: 0;
+    padding-left: 0;
 }
 
 .highlight .lineno {
