--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,8 +8,8 @@ body {
   /* font-family: "Source Serif Pro"; */
   font-family: "Source Serif Variable";
   /* , "PT Serif", Georgia, "Times New Roman", serif; */
-  font-variation-settings: "wght" 450;
-  font-size: 18px;
+  font-variation-settings: "wght" 475;
+  font-size: 16px;
   color: #333;
   line-height: 1.5;
   text-rendering: optimizeLegibility;
@@ -137,7 +137,7 @@ a.footnote {
 .masthead {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
   /* font-family: 'Source Sans Pro', sans-serif; */
 }
 
@@ -145,7 +145,12 @@ a.footnote {
   color:black;
 } */
 
-.masthead-title a {
+.masthead > * {
+  margin-bottom: 20px;
+  /* margin-top: 20px; */
+}
+
+.masthead a {
   font-size: 3rem;
   text-decoration: none;
   /* color: #505050; */
@@ -255,7 +260,10 @@ a.footnote {
 
 .menu {
   padding-top: 0.5rem;
-  display: block;
+  /* display: block; */
+  margin-left: auto;
+  margin-top: auto;
+  padding-bottom: 7px;
 }
 
 .menu-content {
@@ -266,6 +274,10 @@ a.footnote {
   color: #999;
   font-size: 1.5rem;
   padding-right: 10px;
+}
+
+.menu-item {
+  display: inline;
 }
 
 .menu-content .active {
@@ -280,6 +292,15 @@ a.footnote {
 .social-icons a {
   color: #999;
   font-size: 1rem;
+}
+
+@media (min-width: 768px) {
+  .masthead {
+    display: flex;
+    flex-direction: row;
+
+  }
+
 }
 
 @media (max-width: 30em) {
