add subtitles; address Tegan's edits

--- a/_includes/formatted_posts/repr-eval.html
+++ b/_includes/formatted_posts/repr-eval.html
@@ -1,4 +1,4 @@
-<h1>Representation quality and the complexity of learning</h1>
+<!-- <h1>Representation quality and the complexity of learning</h1> -->
 
 <em>Cross-posted from the <a href="https://wp.nyu.edu/cilvr/2020/09/24/representation-quality-and-the-complexity-of-learning/">CILVR blog</a>.</em>
 
