--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,12 @@
 layout: default
 ---
 
-<!-- <h1>
+<h1>
   {{ page.title }}
-</h1> -->
+</h1>
+{% if page.subtitle %}
+  <span class="post-subtitle">{{page.subtitle}}</span>
+{% endif %}
 
 {% if page.image.feature %}
   <img src="/assets/img/{{ page.image.feature }}">
