switch to cloudflare analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,7 +59,10 @@
 
 
 
-  {% include google-analytics.html %}
+  <!-- Cloudflare Web Analytics -->
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "b7b74e4b8a9b4d639289f79b6cb40d1e"}'>
+  </script>
+  <!-- End Cloudflare Web Analytics -->
 
   {% feed_meta %}
 
